# Education-Sup-rieure-

./: .env.example  .gitignore  AUDIT_REPORT_V2.md  DEPLOY_CHECKLIST.md  Dockerfile.client  Dockerfile.server  GUIDE_CD.md  GUIDE_ENSEIGNANT.md  GUIDE_ETUDIANT.md  GUIDE_SUPER_ADMIN.md  GUIDE_UTILISATION.md  MIGRATION_CONSOLIDE_V2_V9.sql  PRESENTATION_PEAN.md  README.md  SECURITY_REPORT.md  SETUP.md  clean_emojis.py  code-review-report.json  deploy.cmd  docker-compose.prod.yml  docker-compose.yml  document_extrait.txt  fix_encoding.py  package.json  vercel.json
server/: check_email.py  copy_for_deploy.py  create_admin.py  deploy_workaround.py  fix_missing_session_access_codes.sql  fix_rls_policies.sql  fix_security_lints.sql  main.py  migration_academic_structure.sql  migration_points_float.sql  migration_session_exercises.sql  pyproject.toml  pytest.ini  requirements.txt  seed.py  supabase_schema.sql  supabase_schema_v10.sql  supabase_schema_v11.sql  supabase_schema_v12.sql  supabase_schema_v2.sql  supabase_schema_v3.sql  supabase_schema_v4.sql  supabase_schema_v5.sql  supabase_schema_v6.sql  supabase_schema_v7.sql  supabase_schema_v8.sql  supabase_schema_v9.sql  test_smtp.py  test_smtp2.py  test_smtp3.py  test_smtp4.py  vercel.json
server/api/: access_codes.py  students_manager.py  ws.py
server/core/: config.py  db.py  dependencies.py  logging_config.py  security.py  supabase_client.py
server/schemas/: __init__.py  auth.py  judge.py  sessions.py  student.py  student_lists.py
server/server/: pyproject.toml  requirements.txt
server/services/: code_executor.py  (+14 more)
(+145 files in other folders)
