[project]
name = "pean-server"
version = "1.0.0"
description = "PEAN Backend - Plateforme d'Évaluation Académique Numérique"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "pydantic==2.9.0",
    "pydantic-settings==2.5.0",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "cryptography==43.0.0",
    "pyotp==2.9.0",
    "websockets==13.0",
    "Pillow==10.4.0",
    "python-docx==1.1.2",
    "openpyxl==3.1.5",
    "fpdf2==2.8.1",
    "qrcode[pil]>=8.2",
    "supabase>=2.16.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
